[gd_scene load_steps=3 format=3 uid="uid://bqkqtfjwnny7u"]

[ext_resource type="Script" path="res://zbuffer.gd" id="1_0ufbl"]
[ext_resource type="PackedScene" uid="uid://b03rirtespbhc" path="res://line_edit.tscn" id="2_6vbxl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_0ufbl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Menu" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="Clear" type="Button" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CLEAR"

[node name="Translate" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Menu/Translate"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "TRANSLATION	
"
horizontal_alignment = 1

[node name="dx" parent="VBoxContainer/HBoxContainer/Menu/Translate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "dx"

[node name="dy" parent="VBoxContainer/HBoxContainer/Menu/Translate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "dy"

[node name="dz" parent="VBoxContainer/HBoxContainer/Menu/Translate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "dz"

[node name="ApplyTrans" type="Button" parent="VBoxContainer/HBoxContainer/Menu/Translate"]
layout_mode = 2
text = "APPLY"

[node name="Rotate" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Menu/Rotate"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "ROTATION
"
horizontal_alignment = 1

[node name="ox" parent="VBoxContainer/HBoxContainer/Menu/Rotate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Ox"

[node name="oy" parent="VBoxContainer/HBoxContainer/Menu/Rotate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Oy"

[node name="oz" parent="VBoxContainer/HBoxContainer/Menu/Rotate" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Oz"

[node name="ApplyRotate" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2

[node name="ApplyRot" type="Button" parent="VBoxContainer/HBoxContainer/Menu/ApplyRotate"]
layout_mode = 2
text = "ROTATE"

[node name="ApplyRotCenter" type="Button" parent="VBoxContainer/HBoxContainer/Menu/ApplyRotate"]
layout_mode = 2
text = "ROTATE CENTER"

[node name="Scale" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Menu/Scale"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "SCALE"
horizontal_alignment = 1

[node name="mx" parent="VBoxContainer/HBoxContainer/Menu/Scale" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Ox"

[node name="my" parent="VBoxContainer/HBoxContainer/Menu/Scale" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Oy"

[node name="mz" parent="VBoxContainer/HBoxContainer/Menu/Scale" instance=ExtResource("2_6vbxl")]
layout_mode = 2
placeholder_text = "Oz"

[node name="ApplyScale" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2

[node name="ApplyScale" type="Button" parent="VBoxContainer/HBoxContainer/Menu/ApplyScale"]
layout_mode = 2
text = "SCALE"

[node name="ApplyScaleCenter" type="Button" parent="VBoxContainer/HBoxContainer/Menu/ApplyScale"]
layout_mode = 2
text = "SCALE CENTER"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LOAD FILE"

[node name="Create" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "CREATE"

[node name="ObjectList" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadFileDialog" type="FileDialog" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(303, 180)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.obj")
use_native_dialog = true

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "AUTO ROTATE"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/Translate/ApplyTrans" to="." method="_on_apply_trans_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/ApplyRotate/ApplyRot" to="." method="_on_apply_rot_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/ApplyRotate/ApplyRotCenter" to="." method="_on_apply_rot_center_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/ApplyScale/ApplyScale" to="." method="_on_apply_scale_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/ApplyScale/ApplyScaleCenter" to="." method="_on_apply_scale_center_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/ObjectList" to="." method="_on_object_list_item_selected"]
[connection signal="file_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
